@@ -3,6 +3,7 @@ Future Build 207-208
 Application Fixes:
 
 - Fixed issues with the SelectSpell improvement not being properly available in the improvements window.
+- Fixed a regression in the behaviour of the cyberadeptdaemon improvement that prevented Resonance being awarded for fractional losses of Essence. In effect, this improvement was only being counted if you had an integer value of CyberwareEssence. Your Resonance will be adjusted on next Submersion, or if you activate the Reapply Improvements menu option. 
 
 Data Changes:
 
